# chat2robot

./: .gitignore  Angabe.tex  Chatbot.py  Chatbot_header.py  README.md  test_gemini.py
conda/: environment.yml
docker/: Dockerfile  README.md  docker-compose.yaml  docker_terminal_commands.bash  setup_and_run.sh  setup_and_run_mac.sh
more/: notes
ros2_ws/: requirements.txt
ros2_ws/src/turtlebot_full_bringup/: CMakeLists.txt  README.md  package.xml  start_turtlebot.sh
ros2_ws/src/turtlebot_full_bringup/launch/: full_bringup.launch.py
ros2_ws/src/turtlebot_full_bringup/maps/: playground_map.yaml  playground_map_edited.pgm  playground_map_hq.yaml  playground_map_hq_edited.pgm
ros2_ws/src/turtlebot_full_bringup/rviz/: rviz.rviz
ros2_ws/src/turtlebot_full_bringup/scripts/: Angabe.tex  Chatbot.py  Chatbot_header.py  README.md
ros2_ws/src/turtlebot_full_bringup/worlds/: playground.world
