<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_full_bringup</name>
  <version>0.0.1</version>
  <description>Full bringup for TurtleBot3 with Gazebo, Nav2 and RViz2</description>

  <maintainer email="re23m017@technikum-wien.at">omen</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for your C++ code -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_filters</depend>
  <depend>eigen</depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  
  <!-- Dependencies used by launch files -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Mark this package as ament_cmake type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


